apps/todo-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: todo-frontend
  name: todo-frontend
  namespace: todo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-frontend

  template:
    metadata:
      labels:
        app: todo-frontend

    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        imagePullPolicy: Always
        command:
        - /http-echo
        - -text=Todo Frontend OK
