apps/todo-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-06-18T18:20:18Z"
  labels:
    app: todo-frontend
  name: todo-frontend
  namespace: todo
  resourceVersion: "13340"
  uid: b6a045c7-8746-4214-b455-a216a4acbb6a
spec:
  clusterIP: 10.43.50.35
  clusterIPs:
  - 10.43.50.35
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: todo-frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
