apps/todo-frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-route
  namespace: todo
spec:
  parentRefs:
  - name: platform-gateway
    namespace: istio-system

  hostnames:
  - "todo.local"

  rules:
  - backendRefs:
    - name: todo-frontend
      port: 80
